test/fail/generated/test_softmax_spatial/test_data_set_0/input_0.pb
JNiK	昿Z?i߾$Q#6< ?gX>@|;?Oo?(
3?vx?r<{l[J>Hu"t? @3y).>|񾚩(>a|?s\2`?xb=6?VW?=?PK#BSg"0hה炾{6?Co>i?icJJF崿y?=5%?w߿mԽ7g?R?f?E%